--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.3",
+    "apexcharts": "^3.49.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
