--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.3",
-    "react-apexcharts": "^1.4.1",
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
