--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-code-blocks": "^0.1.6",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
