--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "msw": "^2.2.14",
     "vite": "^5.2.0"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
