feature: https 설정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,11 @@
-
+# nginx/nginx.conf
 server {
-    listen 80;
+    listen 443 ssl;
     server_name frontend;
+
+    ssl_certificate /etc/nginx/ssl/zolang.site+1.pem;
+    ssl_certificate_key /etc/nginx/ssl/zolang.site+1-key.pem;
+
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
