fix: 배포 성공 커밋

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,2 @@
-# yarnPath: .yarn/releases/yarn-4.1.1.cjs
-nodeLinker: node-modules # 배포 때 사용
+nodeLinker: node-modules # 배포용
+# yarnPath: .yarn/releases/yarn-4.2.2.cjs
