--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,26 +1,15 @@
-# nginx/nginx.conf
 server {
-    listen 443 ssl;
-    server_name frontend;
-
-    ssl_certificate /etc/nginx/ssl/zolang.site+1.pem;
-    ssl_certificate_key /etc/nginx/ssl/zolang.site+1-key.pem;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    root /usr/share/nginx/html;
-    index index.html;
+    listen 80;
+    server_name localhost;
 
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
-    }
-
-    error_page 404 /404.html;
-    location = /40x.html {
     }
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
