--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Zolang-client",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://www.zolang.store",
   "type": "module",
   "scripts": {
     "dev": "vite",
